# songify

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/: copilot-instructions.md
crates/mt-alloc/: Cargo.toml  TODO.md
crates/mt-alloc/src/: alloc_utils.rs  event_ring.rs  feature_buffer.rs  lib.rs  midi_normalizer.rs  note_store.rs  spsc_queue.rs  tempo_map.rs
crates/mt-analysis/: Cargo.toml  TODO.md
crates/mt-analysis/src/: audio_note_detector.rs  confidence.rs  config.rs  lib.rs  midi_note_detector.rs  postprocess.rs  swing_detector.rs  tempo_meter_detector.rs  traits.rs
crates/mt-analysis/src/chord_detector/: mod.rs  rule_based.rs  template_matching.rs
crates/mt-analysis/src/key_detector/: histogram.rs  mod.rs
crates/mt-analysis/src/segmenter/: energy_segmenter.rs  harmonic_segmenter.rs  mod.rs
crates/mt-cli/: Cargo.toml  README.md  TODO.md
crates/mt-cli/src/: main.rs
crates/mt-cli/src/commands/: analyze.rs  benchmark.rs  dump_timeline.rs  mod.rs  validate.rs
crates/mt-core/: Cargo.toml  TODO.md
crates/mt-core/src/: chord.rs  chord_kind.rs  error.rs  interval.rs  key.rs  lib.rs  midi.rs  pitch.rs  scale.rs  time.rs  traits.rs
crates/mt-core/src/events/: chord_event.rs  key_event.rs  meter.rs  mod.rs  note.rs  segment.rs  swing.rs  tempo.rs
crates/mt-core/tests/: chord_test.rs  events_test.rs  key_test.rs  midi_test.rs  pitch_test.rs  scale_test.rs  time_test.rs
crates/mt-engine/: Cargo.toml  README.md  TODO.md
crates/mt-engine/src/: api.rs  config.rs  engine_session.rs  event_bus.rs  lib.rs  logging.rs  pipeline.rs  snapshot.rs  types.rs  validate.rs
crates/mt-ffi/: Cargo.toml  README.md  TODO.md
crates/mt-ffi/src/: api.rs  engine_handle.rs  error.rs  lib.rs  types.rs  version.rs
crates/mt-semantic/: Cargo.toml  README.md  TODO.md
crates/mt-semantic/src/: functional_harmony.rs  graph.rs  lib.rs  motif.rs  voice_leading.rs
crates/mt-signal-core/: Cargo.toml  README.md  TODO.md
crates/mt-signal-core/src/: frame.rs  lib.rs  sample.rs  spectrum.rs  traits.rs  window.rs
docs/: Songify.md  VariantA.md
