[workspace]
members = [
  "crates/mt-alloc",
  "crates/mt-analysis",
  "crates/mt-cli",
  "crates/mt-core",
  "crates/mt-engine",
  "crates/mt-ffi",
  "crates/mt-semantic",
  "crates/mt-signal-core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
authors = ["Dimitar Isusov <lokrain@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
