[package]
name = "mt-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for the Music Theory & Analytics engine."

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mt-core = { path = "../mt-core" }
mt-engine = { path = "../mt-engine" }
